# IVS-Project2

./: .gitignore  GrindsetCalculator-1.0.0-Linux.deb  README.md  hodnoceni.txt  odevzdani.txt  skutecnost.txt
src/: CMakeLists.txt  Doxyfile  Makefile  callgrind.out.25344  grindsetcalc_1.0_amd64.deb  mathlib-test.cpp  mathlib.cpp  mathlib.h  out54.txt  profiling.cpp  profinput  profinput2.in  profinput3.in
src/GUI/: .gitignore  CMakeLists.txt  calculator.cpp
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-73b1bc03a826ceb4e860.json  cmakeFiles-v1-108bb0ef8abbee55b355.json  codemodel-v2-bdaf25047f1db3f243cd.json  index-2022-04-14T20-28-18-0252.json  target-ivs_calculator-Debug-50f1b14dc54fb3ac9d0f.json  (+2 more)
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/ivs_calculator_autogen/: deps
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/ivs_calculator_autogen/EWIEGA46WW/: moc_calculator.cpp  moc_calculator.cpp.d
src/GUI/build-ivs_calculator-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/ivs_calculator_autogen/include/: ui_calculator.h
src/GUI/ivs_calculator/: CMakeLists.txt  Executable  calculator.cpp  calculator.h  calculator.ui  executable  mathlib.cpp  mathlib.h
(+247 files in other folders)
